syntax = "proto3";

option java_package = "ru.spbau.mit.core.proto";
option java_outer_classname = "ConfigurationProtos";

message ConfigurationRequest {
    int32 architectureCode = 1;
    int32 clientsCount = 2;
    int32 requestsPerClient = 3;
}

message ConfigurationResponse {
    bool isSuccessful = 1;
}